--- a/snapserver/Dockerfile
+++ b/snapserver/Dockerfile
@@ -26,6 +26,8 @@ RUN apt-get update && apt-get -y install \
 
 RUN /usr/bin/snapserver -v
 
+COPY www/ /www/
+
 EXPOSE 1704 1705 1780
 
 ENTRYPOINT ["/bin/bash","-c","/usr/bin/snapserver"]
