--- a/snapclient/Dockerfile
+++ b/snapclient/Dockerfile
@@ -11,8 +11,8 @@ RUN apt-get update && apt-get install -y \
     ca-certificates \
     && rm -rf /var/lib/apt/lists/*
   
-RUN wget https://github.com/badaix/snapcast/releases/download/v${snapcast_version}/snapclient_${snapcast_version}-1_$(echo $TARGETARCH | sed 's/arm/armhf/g').deb
-RUN dpkg -i snapclient_${snapcast_version}-1_$(echo $TARGETARCH | sed 's/arm/armhf/g').deb \
+RUN wget https://github.com/badaix/snapcast/releases/download/v${snapcast_version}/snapclient_${snapcast_version}-1_${target_arch}.deb
+RUN dpkg -i snapclient_${snapcast_version}-1_${target_arch}.deb \
   ;  apt-get update && apt-get -f install -y \
   && rm -rf /var/lib/apt/lists/*
 
