--- a/snapclient/Dockerfile
+++ b/snapclient/Dockerfile
@@ -1,7 +1,8 @@
 FROM debian:buster-slim
 
 ARG snapcast_version=0.25.0
-ARG TARGETARCH=armhf
+ARG target_arch=armhf
+
 ENV SERVER snapserver
 ENV DEVICE Headphones
 ENV CLIENT_ID snapclient
