--- a/snapclient/Dockerfile
+++ b/snapclient/Dockerfile
@@ -13,12 +13,15 @@ ENV CLIENT_ID snapclient
 RUN apt-get update && apt-get install -y \
     wget \
     ca-certificates \
-    && rm -rf /var/lib/apt/lists/*
+    gnupg \
+    curl
   
 RUN wget https://github.com/badaix/snapcast/releases/download/v${snapcast_version}/snapclient_${snapcast_version}-1_${target_arch}.deb
 RUN dpkg -i snapclient_${snapcast_version}-1_${target_arch}.deb \
-  ;  apt-get update && apt-get -f install -y \
-  && rm -rf /var/lib/apt/lists/*
+  ;  apt-get update \
+  && apt-get -f install -y
+
+RUN rm -rf /var/lib/apt/lists/*
 
 RUN /usr/bin/snapclient -v
 ENTRYPOINT ["/bin/bash","-c","/usr/bin/snapclient -h $SERVER -s $DEVICE --hostID $CLIENT_ID"]
