updates following new Iris release

--- a/mopidy/mopidy-icecast.conf
+++ b/mopidy/mopidy-icecast.conf
@@ -8,6 +8,7 @@ hostname = 0.0.0.0
 
 [http]
 hostname = 0.0.0.0
+default_app = iris
 
 [audio]
 output = lamemp3enc ! shout2send async=false mount=mopidy ip=icecast port=8000 password=mopidy
@@ -27,6 +28,9 @@ password =
 client_id =
 client_secret =
 bitrate = 320
+# Fast startup because we use the Spotify HTTP API to load these instead
+# Makes playlists unavailable under Browse > Spotify.
+allow_playlists = false
 
 [iris]
 enabled = true
