--- a/mopidy/mopidy-snapserver.conf
+++ b/mopidy/mopidy-snapserver.conf
@@ -8,6 +8,7 @@ hostname = 0.0.0.0
 
 [http]
 hostname = 0.0.0.0
+default_app = iris
 
 [audio]
 output = audioconvert ! audio/x-raw,rate=48000,channels=2,format=S16LE ! wavenc ! filesink location=/tmp/snapfifo
@@ -27,11 +28,15 @@ password =
 client_id =
 client_secret =
 bitrate = 320
+# Fast startup because we use the Spotify HTTP API to load these instead
+# Makes playlists unavailable under Browse > Spotify.
+allow_playlists = false
 
 [iris]
 enabled = true
 country = IE
 locale = en_IE
+snapcast_stream = Mopidy
 
 [scrobbler]
 username =
