--- a/mopidy/mopidy_default.conf
+++ b/mopidy/mopidy_default.conf
@@ -8,6 +8,7 @@ hostname = 0.0.0.0
 
 [http]
 hostname = 0.0.0.0
+default_app = iris
 
 [audio]
 ## Snapserver
@@ -30,6 +31,9 @@ password =
 client_id =
 client_secret =
 bitrate = 320
+# Fast startup because we use the Spotify HTTP API to load these instead
+# Makes playlists unavailable under Browse > Spotify.
+allow_playlists = false
 
 [iris]
 enabled = true
