exposing udp 5555 on mopidy

--- a/mopidy/Dockerfile
+++ b/mopidy/Dockerfile
@@ -61,6 +61,7 @@ COPY mopidy_default.conf /mopidy_default.conf
 
 EXPOSE 6600
 EXPOSE 6680
+EXPOSE 5555/udp
 
 USER mopidy
 ENTRYPOINT ["/usr/local/bin/mopidy.sh"]
