--- a/.github/workflows/stream-manager-docker-image.yml
+++ b/.github/workflows/stream-manager-docker-image.yml
@@ -14,12 +14,28 @@ jobs:
         name: Checkout
         uses: actions/checkout@v2
       -
-        uses: docker/setup-buildx-action@v1
+        name: Set up Docker Buildx
         id: buildx
-        with:
-          install: true
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Inspect builder
+        run: |
+          echo "Name:      ${{ steps.buildx.outputs.name }}"
+          echo "Endpoint:  ${{ steps.buildx.outputs.endpoint }}"
+          echo "Status:    ${{ steps.buildx.outputs.status }}"
+          echo "Flags:     ${{ steps.buildx.outputs.flags }}"
+          echo "Platforms: ${{ steps.buildx.outputs.platforms }}"
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Available platforms
+        run: echo ${{ steps.buildx.outputs.platforms }}
       -
         name: Build
         run: |
-          cd stream-manager
           docker build . # will run buildx
