--- a/.github/workflows/stream-manager-docker-image.yml
+++ b/.github/workflows/stream-manager-docker-image.yml
@@ -13,6 +13,11 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}      
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -34,4 +39,5 @@ jobs:
       -
         name: Build
         run: |
+          cd stream-manager
           docker build . # will run buildx
