--- a/.github/workflows/stream-manager-docker-image.yml
+++ b/.github/workflows/stream-manager-docker-image.yml
@@ -26,22 +26,15 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
       -
-        name: Inspect builder
-        run: |
-          echo "Name:      ${{ steps.buildx.outputs.name }}"
-          echo "Endpoint:  ${{ steps.buildx.outputs.endpoint }}"
-          echo "Status:    ${{ steps.buildx.outputs.status }}"
-          echo "Flags:     ${{ steps.buildx.outputs.flags }}"
-          echo "Platforms: ${{ steps.buildx.outputs.platforms }}"
-      -
-        name: Available platforms
-        run: echo ${{ steps.buildx.outputs.platforms }}
-      -
-        name: Build
-        run: |
-          cd stream-manager
-          docker build . --platform linux/amd64,linux/arm -t ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
-      -
-        name: Push
-        run: |
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
+        name: Build & Push
+        uses: docker/build-push-action@v2
+        with:
+          context: stream-manager
+          file: Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
+          platforms: |
+            linux/amd64
+            linux/arm64
+            linux/arm/v7
+            linux/arm/v6
