--- a/.github/workflows/stream-manager-docker-image.yml
+++ b/.github/workflows/stream-manager-docker-image.yml
@@ -30,7 +30,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: stream-manager
-          file: Dockerfile
+          file: stream-manager/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
           platforms: |
