--- a/.github/workflows/stream-manager-docker-image.yml
+++ b/.github/workflows/stream-manager-docker-image.yml
@@ -18,9 +18,9 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}      
-      # -
-      #   name: Set up QEMU
-      #   uses: docker/setup-qemu-action@v1
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
       -
         name: Set up Docker Buildx
         id: buildx
