--- a/stream-manager/Dockerfile
+++ b/stream-manager/Dockerfile
@@ -1,7 +1,9 @@
 FROM python:slim-bullseye
 LABEL Author Rogger Fabri
 
-RUN pip install snapcast
+RUN apt update && apt upgrade -y \ 
+    && pip install snapcast
+
 COPY stream_manager.py stream_manager.py
 
 CMD [ "python","-u","./stream_manager.py" ]
