--- a/stream-manager/Dockerfile
+++ b/stream-manager/Dockerfile
@@ -2,6 +2,7 @@ FROM python:slim-bullseye
 LABEL Author Rogger Fabri
 
 RUN apt update && apt upgrade -y \ 
+ && python -m pip install --upgrade pip \
  && pip install snapcast
 
 COPY stream_manager.py stream_manager.py
