--- a/stream-manager/Dockerfile
+++ b/stream-manager/Dockerfile
@@ -3,7 +3,8 @@ LABEL Author Rogger Fabri
 
 RUN apt update && apt upgrade -y \ 
  && python -m pip install --upgrade pip \
- && pip install snapcast
+ && pip install snapcast \
+ && rm -rf /var/lib/apt/lists/*
 
 COPY stream_manager.py stream_manager.py
 
