--- a/snapclient/Dockerfile
+++ b/snapclient/Dockerfile
@@ -6,6 +6,7 @@ ENV DEVICE=Headphones
 ENV CLIENT_ID=snapclient
 
 RUN apk update && apk upgrade \ 
- && apk add snapcast
+ && apk add --no-cache \
+    snapcast
 
 CMD ["sh","-c","snapclient -h $SERVER -s $DEVICE --hostID $CLIENT_ID"]
