--- a/mopidy-icecast/docker-compose.yaml
+++ b/mopidy-icecast/docker-compose.yaml
@@ -24,5 +24,5 @@ services:
     depends_on:
       - icecast
     volumes:
-      - ~/mopidy-icesnap/mopidy/mopidy-icecast.conf:/mopidy_default.conf
+      - ~/mopidy-icesnap/mopidy/mopidy-icecast.conf:/mopidy.conf
       - ~/mopidy-icecast/:/mopidy
