--- a/stream-manager/Dockerfile
+++ b/stream-manager/Dockerfile
@@ -3,7 +3,6 @@ LABEL Author Rogger Fabri
 
 ENV SNAPSERVER_IP=127.0.0.1
 ENV SNAPSERVER_PORT=1780
-
 ENV PIP_NO_CACHE_DIR=1
 
 RUN apk update && apk upgrade \ 
@@ -11,7 +10,8 @@ RUN apk update && apk upgrade \
     py3-pip \
     python3 \
  && pip3 install --upgrade pip \
- && pip3 install snapcast
+ && pip3 install snapcast \
+ && rm -rf /var/cache/apk/* /root/.cache 
 
 COPY stream_manager.py stream_manager.py
 
