--- a/snapclient/Dockerfile
+++ b/snapclient/Dockerfile
@@ -1,13 +1,14 @@
 FROM alpine:3.15
-LABEL Author Rogger Fabri
+LABEL Author="Rogger Fabri"
 
 ENV SERVER=snapserver
 ENV DEVICE=Headphones
 ENV CLIENT_ID=snapclient
 
-RUN apk update && apk upgrade \ 
+RUN apk update && apk upgrade \
  && apk add --no-cache \
     snapcast \
- && rm -rf /var/cache/apk/* /root/.cache 
+    tzdata \
+ && rm -rf /var/cache/apk/* /root/.cache
 
 CMD ["sh","-c","snapclient -h $SERVER -s $DEVICE --hostID $CLIENT_ID"]
