--- a/.github/workflows/mopidy.yaml
+++ b/.github/workflows/mopidy.yaml
@@ -19,8 +19,9 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
+      - name: Build and Push
         uses: docker/build-push-action@v3
         with:
           push: true
+          file: mopidy/Dockerfile
           tags: rfabri/mopidy-amd64:latest
