--- a/.github/workflows/mopidy.yaml
+++ b/.github/workflows/mopidy.yaml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - 'master'
+      - "master"
     paths:
-    - 'mopidy/**'
+      - "mopidy/**"
 
 jobs:
   docker:
