--- a/.github/workflows/ado-icecast-docker-image.yml
+++ b/.github/workflows/ado-icecast-docker-image.yml
@@ -1,19 +1,19 @@
 name: ado-icecast
 
-on: 
+on:
   workflow_dispatch:
   push:
     paths:
-    - 'icecast/**'
+      - "icecast/**"
 
 jobs:
-    build:
-        name: Call Azure Pipeline
-        runs-on: ubuntu-latest
-        steps:
-        - name: Azure Pipelines Action
-          uses: Azure/pipelines@v1
-          with:
-            azure-devops-project-url: https://dev.azure.com/${{ secrets.AZURE_DEVOPS_ORG }}/${{ secrets.AZURE_DEVOPS_PROJECT }}
-            azure-pipeline-name: 'icecast [docker-image]'
-            azure-devops-token: ${{ secrets.AZURE_DEVOPS_TOKEN }}
+  build:
+    name: Call Azure Pipeline
+    runs-on: ubuntu-latest
+    steps:
+      - name: Azure Pipelines Action
+        uses: Azure/pipelines@v1
+        with:
+          azure-devops-project-url: https://dev.azure.com/${{ secrets.AZURE_DEVOPS_ORG }}/${{ secrets.AZURE_DEVOPS_PROJECT }}
+          azure-pipeline-name: "icecast [docker-image]"
+          azure-devops-token: ${{ secrets.AZURE_DEVOPS_TOKEN }}
