--- a/.github/workflows/stream-manager.yaml
+++ b/.github/workflows/stream-manager.yaml
@@ -23,6 +23,5 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          context: ./stream-manager
-          file: stream-manager/Dockerfile
+          context: "${{ github.server_url }}/${{ github.repository }}.git#${{ github.ref }}:stream-manager"
           tags: rfabri/stream-manager:amd64-latest
