trying out amd64 for snapserver

--- a/.github/workflows/snapserver.yaml
+++ b/.github/workflows/snapserver.yaml
@@ -25,3 +25,5 @@ jobs:
           push: true
           context: "${{ github.server_url }}/${{ github.repository }}.git#${{ github.ref }}:snapserver"
           tags: rfabri/snapserver:amd64-latest
+          build-args: |
+            target_arch=amd64
