--- a/.github/workflows/mopidy-arm64.yaml
+++ b/.github/workflows/mopidy-arm64.yaml
@@ -43,4 +43,4 @@ jobs:
           platforms: linux/arm64
           push: true
           context: "${{ github.server_url }}/${{ github.repository }}.git#${{ github.ref }}:mopidy"
-          tags: ${{ secrets.DOCKERHUB_SLUG }}/mopidy:amd64-latest
+          tags: ${{ secrets.DOCKERHUB_SLUG }}/mopidy:arm64-latest
