--- a/.github/workflows/snapserver-arm64.yml
+++ b/.github/workflows/snapserver-arm64.yml
@@ -1,10 +1,12 @@
-name: ado-icecast
+name: snapserver-arm64
 
 on:
   workflow_dispatch:
   push:
+    branches:
+      - "master"
     paths:
-      - "icecast/**"
+      - "snapserver/**"
 
 jobs:
   build:
@@ -15,5 +17,5 @@ jobs:
         uses: Azure/pipelines@v1
         with:
           azure-devops-project-url: https://dev.azure.com/${{ secrets.AZURE_DEVOPS_ORG }}/${{ secrets.AZURE_DEVOPS_PROJECT }}
-          azure-pipeline-name: "icecast [docker-image]"
+          azure-pipeline-name: "snapserver [docker-image]"
           azure-devops-token: ${{ secrets.AZURE_DEVOPS_TOKEN }}
