--- a/.github/workflows/stream-manager.yaml
+++ b/.github/workflows/stream-manager.yaml
@@ -24,4 +24,4 @@ jobs:
         with:
           push: true
           context: "${{ github.server_url }}/${{ github.repository }}.git#${{ github.ref }}:stream-manager"
-          tags: rfabri/stream-manager:amd64-latest
+          tags: ${{ secrets.DOCKERHUB_SLUG }}/stream-manager:amd64-latest
