--- a/.github/workflows/icecast-arm64v8.yml
+++ b/.github/workflows/icecast-arm64v8.yml
@@ -1,12 +1,10 @@
-name: snapserver-arm64
+name: icecast-arm64v8
 
 on:
   workflow_dispatch:
   push:
-    branches:
-      - "master"
     paths:
-      - "snapserver/**"
+      - "icecast/**"
 
 jobs:
   build:
@@ -17,5 +15,5 @@ jobs:
         uses: Azure/pipelines@v1
         with:
           azure-devops-project-url: https://dev.azure.com/${{ secrets.AZURE_DEVOPS_ORG }}/${{ secrets.AZURE_DEVOPS_PROJECT }}
-          azure-pipeline-name: "snapserver [docker-image]"
+          azure-pipeline-name: "icecast [docker-image]"
           azure-devops-token: ${{ secrets.AZURE_DEVOPS_TOKEN }}
