--- a/.github/workflows/snapclient-arm64v8.yml
+++ b/.github/workflows/snapclient-arm64v8.yml
@@ -1,10 +1,12 @@
-name: icecast-arm64
+name: snapclient-arm64v8
 
 on:
   workflow_dispatch:
   push:
+    branches:
+      - "master"
     paths:
-      - "icecast/**"
+      - "snapclient/**"
 
 jobs:
   build:
@@ -15,5 +17,5 @@ jobs:
         uses: Azure/pipelines@v1
         with:
           azure-devops-project-url: https://dev.azure.com/${{ secrets.AZURE_DEVOPS_ORG }}/${{ secrets.AZURE_DEVOPS_PROJECT }}
-          azure-pipeline-name: "icecast [docker-image]"
+          azure-pipeline-name: "snapclient [docker-image]"
           azure-devops-token: ${{ secrets.AZURE_DEVOPS_TOKEN }}
