--- a/.github/workflows/stream-manager-arm64v8.yml
+++ b/.github/workflows/stream-manager-arm64v8.yml
@@ -1,4 +1,4 @@
-name: snapclient-arm64
+name: stream-manager-arm64v8
 
 on:
   workflow_dispatch:
@@ -6,7 +6,7 @@ on:
     branches:
       - "master"
     paths:
-      - "snapclient/**"
+      - "stream-manager/**"
 
 jobs:
   build:
@@ -17,5 +17,5 @@ jobs:
         uses: Azure/pipelines@v1
         with:
           azure-devops-project-url: https://dev.azure.com/${{ secrets.AZURE_DEVOPS_ORG }}/${{ secrets.AZURE_DEVOPS_PROJECT }}
-          azure-pipeline-name: "snapclient [docker-image]"
+          azure-pipeline-name: "stream-manager [docker-image]"
           azure-devops-token: ${{ secrets.AZURE_DEVOPS_TOKEN }}
