--- a/snapserver/snapserver.conf
+++ b/snapserver/snapserver.conf
@@ -6,5 +6,4 @@ stream = spotify:///librespot?name=Spotify&devicename=Snapcast&bitrate=320&volum
 enabled = true
 bind_to_address = 0.0.0.0
 port = 1780
-doc_root = /www
-#doc_root = /usr/share/snapserver/snapweb/
+doc_root = /usr/share/snapserver/snapweb/
